# mesh-simplification-study

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  cgal_simplify.cpp  generate_comparison_charts.py  generate_heatmaps.py  mesh_simplifier.py  mesh_simplifier_batch.py  requirements.txt
docs/: METHODOLOGY.md
environments/: README.md  environment_meshcnn.yml  environment_neural.yml  environment_traditional.yml
neural_methods/: DEVELOPMENT_LOG.md  README.md  my_neural_modifications.patch  prepare_mesh_for_meshcnn.py  run_meshcnn.py  run_neural_simp.py
test_meshes/: README.md
